--- a/health-service-directory/package.json
+++ b/health-service-directory/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.5.2",
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
