--- a/health-service-directory/package.json
+++ b/health-service-directory/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.5",
     "date-fns": "^3.1.0",
+    "framer-motion": "^12.9.2",
     "leaflet": "^1.9.4",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
