--- a/health-service-directory/package.json
+++ b/health-service-directory/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.8",
     "@reduxjs/toolkit": "^2.0.1",
+    "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.5",
     "date-fns": "^3.1.0",
