--- a/health-service-directory/package.json
+++ b/health-service-directory/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.5",
     "date-fns": "^3.1.0",
     "framer-motion": "^12.9.2",
+    "jspdf": "^3.0.1",
     "leaflet": "^1.9.4",
     "postcss": "^8.4.32",
     "qrcode.react": "^4.2.0",
